# hse-anns

./: .gitignore  CMakeLists.txt  README.md
notebooks/: greedy-net-1.ipynb  greedy-net-2.ipynb  greedy-net-3.ipynb
scripts/: download.py  greedy-net-qps-recall.py  tann.py
src/: main.cpp
src/drivers/: hdf5.cpp  hdf5.hpp
src/index/: greedy-net.cpp  greedy-net.hpp  hnsw.hpp  linear.hpp  visited_list_pool.h
src/space/: i16.hpp  i32.hpp  space.hpp
src/task/: build_and_test.cpp  build_and_test.hpp
test/: CMakeLists.txt  space.cpp
